<resources>
    <string name="app_name">Simple flickr client</string>
    <string name="search_query_hint">Enter search query here</string>
    <string name="action_search">Search</string>
    <string name="msg_wait">Wait please…</string>
    <string name="hint_search">Your search result will be shown here</string>
    <string name="error_text">Error</string>
    <string name="error_empty_search">Error. Empty search request.</string>
    <string name="error_network_timeout">Connection timeout</string>
    <string name="error_nothing_found">No results were found for your search</string>
    <string name="error_default_message">Something bad happened :(</string>
    <string name="description_splash_screen">Simple flickr client logo</string>

    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="login_failed">Login failed. Empty username.</string>

    <string name="action_favourites">Favourites</string>
    <string name="removed_from_favourites">Removed from Favourites</string>
    <string name="removed_from_list">Removed from list</string>
    <string name="added_to_favourites">Added to Favourites</string>

    <string name="image_viewer">Image</string>

    <string name="night_mode_on">Night mode activated</string>
    <string name="night_mode_off">Day mode activated</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_search_history">Search history</string>
    <string name="action_map">Search on map</string>
    <string name="action_sync_images">New images</string>
    <string name="search_on_map">Search on map</string>
    <string name="select_point_message">Select point to search photos near</string>
    <string name="error_undefined_location">Can not find your current location now</string>
    <string name="action_gallery">Gallery</string>
    <string name="need_photo_permission">This feature requires your permission to take photos</string>
    <string name="need_location_permission">This feature requires your permission to search for nearby photos</string>
    <string name="need_alert_permission">This application requires your permission to start after reboot</string>
    <string name="alert_permission_ok">This application will start after reboot</string>
    <string name="need_storage_permission">This feature requires your permission to save images</string>
    <string name="toggle_night_mode">Night Mode</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="add_photo">Add photo</string>
    <string name="remove_from_favourites">Tap to remove from favourites</string>
    <string name="one_of_your_favorite_pictures">One of your favorite pictures</string>
    <string name="image_saved">Image Saved successfully</string>
    <string name="exception_message">Must implement OnFragmentInteractionListener</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="ui_title">Interface</string>
    <string name="sync_title">Background work</string>
    <string name="update_in_background">Check for updates</string>
    <string name="update_interval_title">Update interval</string>
    <string name="update_request_title">Keyword to search</string>
    <string name="channel_name">Sync Images</string>
    <string name="channel_description">Download new flikr images in background</string>
    <string name="sync_notification_title">Flickr Background Sync (%1$s)</string>
    <string name="sync_notification_text">New images: %1$d</string>
</resources>