<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GalleryFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_gallery_images"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/recyclerViewMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_image_list" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_make_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fabMargin"
        android:clickable="true"
        android:contentDescription="@string/add_photo"
        android:focusable="true"
        app:backgroundTint="?attr/colorPrimaryDark"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_a_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>